--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@ beautifulsoup4==4.6.0
 bs4==0.0.1
 certifi==2018.1.18
 chardet==3.0.4
+get==2018.11.19
 idna==2.6
+post==2018.11.20
+public==2018.11.20
+query-string==2018.11.20
+request==2018.11.20
 requests==2.18.4
-urllib3>=1.22
+urllib3==1.22
